tests/baselines/reference/unusedSingleParameterInMethodDeclaration.errors.txt
tests/cases/compiler/unusedSingleParameterInMethodDeclaration.ts(3,20): error TS6134: Parameter 'person' has never been used.
tests/cases/compiler/unusedSingleParameterInMethodDeclaration.ts(4,13): error TS6133: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedSingleParameterInMethodDeclaration.ts (2 errors) ====
    
    class Dummy {
        public greeter(person: string) {
                       ~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'person' has never been used.
            var unused = 20;
                ~~~~~~
!!! error TS6133: Variable 'unused' has never been used.
        }
    }